feat: changed gui